[package]
name = "inside_out_expand"
version = "0.1.0"
edition = "2021"
description = "Proc macros that expand nested macro invocations inside-out instead of outside-in"
license = "MIT"
repository = "https://github.com/evgunter/inside_out_expand"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"

[[test]]
name = "integration_tests"
path = "tests/src/run_integration_tests.rs"
harness = false
